--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-
+#MongoDB
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=idlebattle
+spring.data.mongodb.username=admin
+spring.data.mongodb.password=pass
+spring.data.mongodb.authentication-database=admin
